crates/edgezero-macros/tests/ui/secret_bogus_kind.stderr
error: `#[secret(...)]` accepts `store_ref` or `store_ref = "field"` (e.g. `#[secret(store_ref)]` or `#[secret(store_ref = "vault")]`)
 --> tests/ui/secret_bogus_kind.rs:6:14
  |
6 |     #[secret(bogus)]
  |              ^^^^^
